k8s/cassandra-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cassandra-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: cassandra-server
  template:
    metadata:
      labels:
        component: cassandra-server
    spec:
      volumes:
        - name: cassandra-storage
          persistentVolumeClaim:
              claimName: cassandra-pvc
      containers:
      - name: cassandra-server
        image: cassandra:latest
        ports:
        - containerPort: 9042
        volumeMounts:
          - name: cassandra-storage
            mountPath: /var/lib/cassandra/data
            subPath: cassandra
