k8s/postgres-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres-server
  template:
    metadata:
      labels:
        component: postgres-server
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
              claimName: postgres-pvc
      containers:
      - name: postgres-server
        image: postgres:12-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
            subPath: postgres
