k8s/users-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: users-service
  template:
    metadata:
      labels:
        component: users-service
    spec:
      containers:
      - name: users-service
        image: jdiaz740/users-service
        ports:
        - containerPort: 8070
