k8s/zipkin-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: zipkin-server
  template:
    metadata:
      labels:
        component: zipkin-server
    spec:
      containers:
      - name: zipkin-server
        image: jdiaz740/zipkin-server
        ports:
        - containerPort: 9411
