k8s/auth-server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: auth-server
  ports:
  - port: 9100
    targetPort: 9100
