k8s/cassandra-server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandra-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: cassandra-server
  ports:
  - port: 9042
    targetPort: 9042
