k8s/config-server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: config-server
  ports:
  - port: 8888
    targetPort: 8888
