k8s/eureka-server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: eureka-server
  ports:
  - port: 8761
    targetPort: 8761
