k8s/postgres-server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: postgres-server
  ports:
  - port: 5432
    targetPort: 5432
