k8s/rabbitmq-server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: rabbitmq-server
  ports:
  - port: 5672
    targetPort: 5672
    name: queue
  - port: 15672
    targetPort: 15672
    name: management
