k8s/users-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: users-service
  ports:
  - port: 8070
    targetPort: 8070
