k8s/zipkin-server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: zipkin-server
  ports:
  - port: 9411
    targetPort: 9411
