k8s/zuul-server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: zuul-server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: zuul-server
  ports:
  - port: 8090
    targetPort: 8090
