k8s/zuul-ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service-zuul
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'

spec:
  tls:
    - hosts:
        - imjesus.dev
        - www.imjesus.dev
      secretName: im-jesus-dev
  rules:
    - host: imjesus.dev
      http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: zuul-server-cluster-ip
              servicePort: 8090
    - host: www.imjesus.dev
      http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: zuul-server-cluster-ip
              servicePort: 8090
